# qa-auto-engineer-python-project-314

./: .gitignore  Makefile  README.md  pyproject.toml
pages/: base_page.py  dashboard_page.py  labels_page.py  login_page.py  side_menu_widget.py  task_statuses_page.py  users_page.py
tests/: conftest.py  test_smoke.py
utils/: by_js.py  utils.py
